--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-content: center;
   align-items: center;
   position: relative;
 }
@@ -99,22 +100,47 @@ body {
   margin: 3rem auto;
 }
 
-.container{
-  max-width: 1200px;
-  margin: 0 auto;
+.carousel-container{
+  position: relative;
+  width: 50%;
+  margin: auto;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.carousel-btn{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0,0,0,0.5);
+  color: white;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  padding: 10px;
+  z-index: 10;
+}
+#prev {
+  left: 0;
+}
+#next {
+  right: 0;
+}
+.carousel-btn:hover{
+  background: rgba(0,0,0,0.8);
 }
 /* challenges */
 .challenges{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1.5rem;
-  margin-top: 1.5rem;
-  font-family: var(--pixel);
+  display: flex;
+  justify-content: center;
+  transition: transform 0.5s ease-in-out;
+  width: max-content;
 }
 .challenge{
   position: relative;
-  width: 20.125rem;
-  height: 23.625rem;
+  width: 28.125rem;
+  height: 34.625rem;
   border: 2px solid black;
   display: flex;
   align-items: center;
@@ -122,11 +148,11 @@ body {
   justify-content: center;
   padding-bottom: 1rem;
   background: var(--pale-pink);
-  margin-top: 1.5rem;
+  margin: 0 10px;
 }
 .challenge-day{
   position: absolute;
-  width: 20.125rem;
+  width: inherit;
   top: -2px;
   left: -2px;
   background: var(--pink);
@@ -143,10 +169,11 @@ body {
   margin-left: 1rem;
 }
 .challenge-img{
-  width: 18.125rem;
-  height: 11.125rem;
+  width: 25.125rem;
+  height: 18.125rem;
   display: block;
-  margin-top: auto;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
   background: black;
   object-fit: cover;
 }
@@ -154,6 +181,7 @@ body {
   font-size: 1.5rem;
   text-align: center;
   margin-top: 0.5rem;
+  margin-bottom: 1rem;
   color: var(--gray-black);
 }
 .challenge-links{
@@ -168,8 +196,8 @@ body {
   text-align: center;
   color: var(--gray-black);
   border: 2px solid black;
-  width: 6rem;
-  height: 2rem;
+  width: 8rem;
+  height: 3rem;
   font-size: 1.2rem;
 }
 .demo-link{
