--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 :root{
   /* colors */
-  --bg-color: #f8f7f3;
+  /*--bg-color: #f8f7f3;*/
+  --bg-color: #f0eef3;
   --white: #ffffff;
   --black: #000000;
   --pale-pink: #fde8ef;
