--- a/05-Flex-Panel-Gallery/style.css
+++ b/05-Flex-Panel-Gallery/style.css
@@ -1,1 +1,106 @@
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One:ital@0;1&display=swap');
 
+html {
+  box-sizing: border-box;
+  background: #ffc600;
+  font-family: "Zen Loop";
+  font-size: 20px;
+  font-weight: 200;
+}
+
+body {
+  margin: 0;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+.panels {
+  min-height: 100vh;
+  overflow: hidden;
+  display: flex;
+}
+
+.panel {
+  background: #6b0f9c;
+  color: #000;
+  text-align: center;
+  align-items: center;
+  /* Safari transitionend event.propertyName === flex */
+  /* Chrome + FF transitionend event.propertyName === flex-grow */
+  transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
+    flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
+  font-size: 20px;
+  background-size: cover;
+  background-position: center;
+  flex: 1;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.panel1 {
+  background: #493548;
+}
+.panel2 {
+  background: #4B4E6D;
+}
+.panel3 {
+  background: #6A8D92;
+}
+.panel4 {
+  background: #80B192;
+}
+.panel5 {
+  background: #A1E887;
+}
+
+/* Flex Children */
+.panel > * {
+  margin: 0;
+  width: 100%;
+  transition: transform 0.5s;
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.panel > *:first-child {
+  transform: translateY(-100%);
+}
+.panel.open-active > *:first-child {
+  transform: translateY(0);
+}
+.panel > *:last-child {
+  transform: translateY(100%);
+}
+.panel.open-active > *:last-child {
+  transform: translateY(0);
+}
+
+.panel p {
+  text-transform: uppercase;
+  font-family: "Poiret One";
+  font-weight: 600;
+  opacity: 0.4;
+  font-size: 0.8em;
+}
+
+.panel p:nth-child(2) {
+  font-size: 3em;
+}
+
+.panel.open {
+  flex: 5;
+  font-size: 40px;
+  color: #fff;
+}
+
+@media only screen and (max-width: 600px) {
+      .panel p {
+        font-size: 1em;
+      }
